# weRecruit

./: .gitignore  CONTRIBUTING.md  api-user-guide.md  checkout1.html  checkout3.html  constants.py  dbUtils.py  fulgorithm_api.py  installing py package on ubuntu.txt  notes.txt  productUtils.py  readme.md  req.txt  requirements.txt  setup.cfg  userUtils.py  webServices.py  werecruit_start.sh  wr_maintain.sh  wr_stop.sh
UI Design/: create-job.html  job-browser.html  job-position-summary.html  style.css
conf/: admin_create_ddl.sql  admin_drop_ddl.sql  job_appl_status_change.template  resume_upload_response.template  sign_up_notification.html  upgrade_db.sql
doc/: dev.md  prod.md
src/fulgorithm/: userUtils.py  webServices.py
src/fulgorithm_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/werecruit/: commonUtils.py  constants.py  cronjobs.py  dbUpgrade.py  dbUtils.py  emailUtils.py  jdUtils.py  reports.py  resumeUtils.py  userUtils.py  webApp.py  webForms.py  webServices.py
src/werecruit/static/: main.css
src/werecruit/static/css/: bulma.css  dashboard.css  main.css
src/werecruit/static/js/: main.js
src/werecruit/templates/: app_footer.html  app_header.html  candidate_funnel.html  create_jd.html  features.html  header.html  home.html  index.html  jd_home.html  sign_in.html  sign_up.html  trending_jds_card.html
src/werecruit/templates/dashboard/: candidate_funnel.html  dashboard.html  data_card.html  interview_schedule.html  pending_actions.html  (+1 more)
test/resume-set-1/: Akshay_resume.docx  Dipesh_Shelar_CV.docx  Time_Sheet.xlsx
(+51 files in other folders)
