[metadata]
# replace with your username:
name = fulgorithm-api
version = 0.0.1
author = fulgorithm
author_email = author@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

install_requires = 
    blinker==1.4
    build==0.3.1.post1
    certifi==2020.12.5
    chardet==4.0.0
    click==7.1.2
    Flask==1.1.2
    Flask-Cors==3.0.10
    Flask-Mail==0.9.1
    idna==2.10
    imap-tools==0.39.0
    itsdangerous==1.1.0
    Jinja2==2.11.3
    MarkupSafe==1.1.1
    packaging==20.9
    pep517==0.10.0
#    psycopg2==2.8.6
    psycopg2-binary
    pyparsing==2.4.7
    python-dotenv==0.16.0
    requests==2.25.1
    simplejson==3.17.2
    six==1.15.0
    stripe==2.56.0
    toml==0.10.2
    urllib3==1.26.4
    Werkzeug==1.0.1

[options.packages.find]
where = src
